unpackaged/main/default/objects/Scorecard__c/Scorecard__c.object-meta.xml
<CustomObject>
    <label>Score</label>
    <nameField>
        <displayFormat>Sc-{0000}</displayFormat>
        <label>Score Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>