unpackaged/main/default/objects/Scorecard__c/fields/Accountancy__c.field-meta.xml
<CustomField>
    <fullName>Accountancy__c</fullName>
    <label>Accountancy</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>