unpackaged/main/default/objects/Scorecard__c/fields/Analog_Electronic_Circuits__c.field-meta.xml
<CustomField>
    <fullName>Analog_Electronic_Circuits__c</fullName>
    <label>Analog Electronic Circuits</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>