unpackaged/main/default/objects/Scorecard__c/fields/Analog_Electronics__c.field-meta.xml
<CustomField>
    <fullName>Analog_Electronics__c</fullName>
    <label>Analog Electronics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>