unpackaged/main/default/objects/Scorecard__c/fields/Anatomy__c.field-meta.xml
<CustomField>
    <fullName>Anatomy__c</fullName>
    <label>Anatomy</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>