unpackaged/main/default/objects/Scorecard__c/fields/Antennas_and_Propagation__c.field-meta.xml
<CustomField>
    <fullName>Antennas_and_Propagation__c</fullName>
    <label>Antennas and Propagation</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>