unpackaged/main/default/objects/Scorecard__c/fields/Applied_basic_science_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Applied_basic_science_knowledge__c</fullName>
    <label>Applied basic science knowledge</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>