unpackaged/main/default/objects/Scorecard__c/fields/Automotive_Design__c.field-meta.xml
<CustomField>
    <fullName>Automotive_Design__c</fullName>
    <label>Automotive Design</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>