unpackaged/main/default/objects/Scorecard__c/fields/Banking__c.field-meta.xml
<CustomField>
    <fullName>Banking__c</fullName>
    <label>Banking</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>