unpackaged/main/default/objects/Scorecard__c/fields/Basic_Electronics__c.field-meta.xml
<CustomField>
    <fullName>Basic_Electronics__c</fullName>
    <label>Basic Electronics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>