unpackaged/main/default/objects/Scorecard__c/fields/Biostatistics_and_Clinical_Epidemiology__c.field-meta.xml
<CustomField>
    <fullName>Biostatistics_and_Clinical_Epidemiology__c</fullName>
    <label>Biostatistics and Clinical Epidemiology</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>