unpackaged/main/default/objects/Scorecard__c/fields/Buliding_Materials__c.field-meta.xml
<CustomField>
    <fullName>Buliding_Materials__c</fullName>
    <label>Buliding Materials</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>