unpackaged/main/default/objects/Scorecard__c/fields/Child_Health_Nursing__c.field-meta.xml
<CustomField>
    <fullName>Child_Health_Nursing__c</fullName>
    <label>Child Health Nursing</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>