unpackaged/main/default/objects/Scorecard__c/fields/Clinical_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Pharmacy__c</fullName>
    <label>Clinical Pharmacy</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>