unpackaged/main/default/objects/Scorecard__c/fields/Community_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Community_Medicine__c</fullName>
    <label>Community Medicine</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>