unpackaged/main/default/objects/Scorecard__c/fields/Composition_and_Function_of_Blood__c.field-meta.xml
<CustomField>
    <fullName>Composition_and_Function_of_Blood__c</fullName>
    <label>Composition and Function of Blood</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>