unpackaged/main/default/objects/Scorecard__c/fields/COMPUTER_NETWORKS__c.field-meta.xml
<CustomField>
    <fullName>COMPUTER_NETWORKS__c</fullName>
    <label>COMPUTER NETWORKS</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>