unpackaged/main/default/objects/Scorecard__c/fields/Concrete_Technology__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Technology__c</fullName>
    <label>Concrete Technology</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>