unpackaged/main/default/objects/Scorecard__c/fields/Control_Systems__c.field-meta.xml
<CustomField>
    <fullName>Control_Systems__c</fullName>
    <label>Control Systems</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>