unpackaged/main/default/objects/Scorecard__c/fields/Dental_Materials__c.field-meta.xml
<CustomField>
    <fullName>Dental_Materials__c</fullName>
    <label>Dental Materials</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>