unpackaged/main/default/objects/Scorecard__c/fields/Diagnostic_investigation_and_procedures__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_investigation_and_procedures__c</fullName>
    <label>Diagnostic investigation and procedures</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>