unpackaged/main/default/objects/Scorecard__c/fields/Digital_Electronics__c.field-meta.xml
<CustomField>
    <fullName>Digital_Electronics__c</fullName>
    <label>Digital Electronics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>