unpackaged/main/default/objects/Scorecard__c/fields/Digital_Switching_Systems__c.field-meta.xml
<CustomField>
    <fullName>Digital_Switching_Systems__c</fullName>
    <label>Digital Switching Systems</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>