unpackaged/main/default/objects/Scorecard__c/fields/Diseases_concerning_General_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Diseases_concerning_General_Medicine__c</fullName>
    <label>Diseases concerning General Medicine</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>