unpackaged/main/default/objects/Scorecard__c/fields/Economics__c.field-meta.xml
<CustomField>
    <fullName>Economics__c</fullName>
    <label>Economics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>