unpackaged/main/default/objects/Scorecard__c/fields/Electric_Circuits__c.field-meta.xml
<CustomField>
    <fullName>Electric_Circuits__c</fullName>
    <label>Electric Circuits</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>