unpackaged/main/default/objects/Scorecard__c/fields/Embedded_System_Design__c.field-meta.xml
<CustomField>
    <fullName>Embedded_System_Design__c</fullName>
    <label>Embedded System Design</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>