unpackaged/main/default/objects/Scorecard__c/fields/Engineering_Mathematics_I__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Mathematics_I__c</fullName>
    <label>Engineering Mathematics – I</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>