unpackaged/main/default/objects/Scorecard__c/fields/Enzymes_Nature_and_Functions__c.field-meta.xml
<CustomField>
    <fullName>Enzymes_Nature_and_Functions__c</fullName>
    <label>Enzymes, Nature, and Functions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>