unpackaged/main/default/objects/Scorecard__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <label>Finance</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>