unpackaged/main/default/objects/Scorecard__c/fields/Financial_Market__c.field-meta.xml
<CustomField>
    <fullName>Financial_Market__c</fullName>
    <label>Financial Market</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>