unpackaged/main/default/objects/Scorecard__c/fields/Fluid_Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Mechanics__c</fullName>
    <label>Fluid Mechanics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>