unpackaged/main/default/objects/Scorecard__c/fields/Fundamentals_of_CMOS__c.field-meta.xml
<CustomField>
    <fullName>Fundamentals_of_CMOS__c</fullName>
    <label>Fundamentals of CMOS</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>