unpackaged/main/default/objects/Scorecard__c/fields/General_Human_Anatomy_including_Embryolo__c.field-meta.xml
<CustomField>
    <fullName>General_Human_Anatomy_including_Embryolo__c</fullName>
    <label>General Human Anatomy including Embryolo</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>