unpackaged/main/default/objects/Scorecard__c/fields/General_Pathology_and_Microbiology__c.field-meta.xml
<CustomField>
    <fullName>General_Pathology_and_Microbiology__c</fullName>
    <label>General Pathology and Microbiology</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>