unpackaged/main/default/objects/Scorecard__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>