unpackaged/main/default/objects/Scorecard__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>History</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>