unpackaged/main/default/objects/Scorecard__c/fields/Human_Resource__c.field-meta.xml
<CustomField>
    <fullName>Human_Resource__c</fullName>
    <label>Human Resource</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>