unpackaged/main/default/objects/Scorecard__c/fields/Indian_Economy__c.field-meta.xml
<CustomField>
    <fullName>Indian_Economy__c</fullName>
    <label>Indian Economy</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>