unpackaged/main/default/objects/Scorecard__c/fields/Investment_Management__c.field-meta.xml
<CustomField>
    <fullName>Investment_Management__c</fullName>
    <label>Investment Management</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>