unpackaged/main/default/objects/Scorecard__c/fields/Macroeconomics__c.field-meta.xml
<CustomField>
    <fullName>Macroeconomics__c</fullName>
    <label>Macroeconomics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>