unpackaged/main/default/objects/Scorecard__c/fields/Management_and_Entrepreneurship__c.field-meta.xml
<CustomField>
    <fullName>Management_and_Entrepreneurship__c</fullName>
    <label>Management and Entrepreneurship</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>