unpackaged/main/default/objects/Scorecard__c/fields/Medical_Surgical_Nursing__c.field-meta.xml
<CustomField>
    <fullName>Medical_Surgical_Nursing__c</fullName>
    <label>Medical-Surgical Nursing</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>