unpackaged/main/default/objects/Scorecard__c/fields/Microcontrollers__c.field-meta.xml
<CustomField>
    <fullName>Microcontrollers__c</fullName>
    <label>Microcontrollers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>