unpackaged/main/default/objects/Scorecard__c/fields/Network_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Network_Analysis__c</fullName>
    <label>Network Analysis</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>