unpackaged/main/default/objects/Scorecard__c/fields/Nutrition__c.field-meta.xml
<CustomField>
    <fullName>Nutrition__c</fullName>
    <label>Nutrition</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>