unpackaged/main/default/objects/Scorecard__c/fields/Operating__c.field-meta.xml
<CustomField>
    <fullName>Operating__c</fullName>
    <label>Operating Systems</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>