unpackaged/main/default/objects/Scorecard__c/fields/Optical_Fiber_Communication__c.field-meta.xml
<CustomField>
    <fullName>Optical_Fiber_Communication__c</fullName>
    <label>Optical Fiber Communication</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>