unpackaged/main/default/objects/Scorecard__c/fields/Pathology__c.field-meta.xml
<CustomField>
    <fullName>Pathology__c</fullName>
    <label>Pathology</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>