unpackaged/main/default/objects/Scorecard__c/fields/Pharmaceutical_Inorganic_Chemistry__c.field-meta.xml
<CustomField>
    <fullName>Pharmaceutical_Inorganic_Chemistry__c</fullName>
    <label>Pharmaceutical Inorganic Chemistry</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>