unpackaged/main/default/objects/Scorecard__c/fields/Pharmaceutics__c.field-meta.xml
<CustomField>
    <fullName>Pharmaceutics__c</fullName>
    <label>Pharmaceutics</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>