unpackaged/main/default/objects/Scorecard__c/fields/Philosophy__c.field-meta.xml
<CustomField>
    <fullName>Philosophy__c</fullName>
    <label>Philosophy</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>