unpackaged/main/default/objects/Scorecard__c/fields/Physiology__c.field-meta.xml
<CustomField>
    <fullName>Physiology__c</fullName>
    <label>Physiology</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>