unpackaged/main/default/objects/Scorecard__c/fields/Political_Science__c.field-meta.xml
<CustomField>
    <fullName>Political_Science__c</fullName>
    <label>Political Science</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>