unpackaged/main/default/objects/Scorecard__c/fields/Preclinical_Conservative_Dentistry__c.field-meta.xml
<CustomField>
    <fullName>Preclinical_Conservative_Dentistry__c</fullName>
    <label>Preclinical Conservative Dentistry</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>