unpackaged/main/default/objects/Scorecard__c/fields/Programming_in_C_and_Data_structures__c.field-meta.xml
<CustomField>
    <fullName>Programming_in_C_and_Data_structures__c</fullName>
    <label>Programming in C and Data structures</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>