unpackaged/main/default/objects/Scorecard__c/fields/Project_Work_EC__c.field-meta.xml
<CustomField>
    <fullName>Project_Work_EC__c</fullName>
    <label>Project Work EC</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>