unpackaged/main/default/objects/Scorecard__c/fields/Psychiatric_Nursing__c.field-meta.xml
<CustomField>
    <fullName>Psychiatric_Nursing__c</fullName>
    <label>Psychiatric Nursing</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>