unpackaged/main/default/objects/Scorecard__c/fields/Psychology__c.field-meta.xml
<CustomField>
    <fullName>Psychology__c</fullName>
    <label>Psychology</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>