unpackaged/main/default/objects/Scorecard__c/fields/Regional_language__c.field-meta.xml
<CustomField>
    <fullName>Regional_language__c</fullName>
    <label>Regional language</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>