unpackaged/main/default/objects/Scorecard__c/fields/Remedial_Mathematics_Biology__c.field-meta.xml
<CustomField>
    <fullName>Remedial_Mathematics_Biology__c</fullName>
    <label>Remedial Mathematics/Biology</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>