unpackaged/main/default/objects/Scorecard__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>25</length>
    <type>Text</type>
</CustomField>