unpackaged/main/default/objects/Scorecard__c/fields/Skeletal_and_Joint_System__c.field-meta.xml
<CustomField>
    <fullName>Skeletal_and_Joint_System__c</fullName>
    <label>Skeletal and Joint System</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>