unpackaged/main/default/objects/Scorecard__c/fields/Sociology__c.field-meta.xml
<CustomField>
    <fullName>Sociology__c</fullName>
    <label>Sociology</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>