unpackaged/main/default/objects/Scorecard__c/fields/Solid_Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Solid_Mechanics__c</fullName>
    <label>Solid Mechanics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>