unpackaged/main/default/objects/Scorecard__c/fields/Statistics__c.field-meta.xml
<CustomField>
    <fullName>Statistics__c</fullName>
    <label>Statistics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>