unpackaged/main/default/objects/Scorecard__c/fields/Structural_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Structural_Analysis__c</fullName>
    <label>Structural Analysis</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>