unpackaged/main/default/objects/Scorecard__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipName>Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>