unpackaged/main/default/objects/Scorecard__c/fields/Surveying__c.field-meta.xml
<CustomField>
    <fullName>Surveying__c</fullName>
    <label>Surveying</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>