unpackaged/main/default/objects/Scorecard__c/fields/Taxation__c.field-meta.xml
<CustomField>
    <fullName>Taxation__c</fullName>
    <label>Taxation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>