unpackaged/main/default/objects/Scorecard__c/fields/Thermodynamics__c.field-meta.xml
<CustomField>
    <fullName>Thermodynamics__c</fullName>
    <label>Thermodynamics</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>