unpackaged/main/default/objects/Scorecard__c/fields/VLSI_TECHNOLOGY__c.field-meta.xml
<CustomField>
    <fullName>VLSI_TECHNOLOGY__c</fullName>
    <label>VLSI TECHNOLOGY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>