unpackaged/main/default/objects/Scorecard__c/recordTypes/Arts_and_Commerce.recordType-meta.xml
<RecordType>
    <fullName>Arts_and_Commerce</fullName>
    <active>true</active>
    <label>Arts and Commerce</label>
</RecordType>