unpackaged/main/default/objects/Scorecard__c/recordTypes/Engineering.recordType-meta.xml
<RecordType>
    <fullName>Engineering</fullName>
    <active>true</active>
    <label>Engineering</label>
</RecordType>